scala_library(
    sources = ["*.scala"],
    compiler_option_sets = ["fatal_warnings"],
    strict_deps = True,
    tags = ["bazel-compatible"],
    dependencies = [
        "3rdparty/jvm/com/knuddels/jtokkit",
        "3rdparty/jvm/io/grpc:grpc-protobuf",
        "3rdparty/jvm/org/scalanlp:breeze",
        "hmli/hss/src/main/thrift/com/twitter/hss:thrift-scala",
        "home-mixer-features/thrift/src/main/thrift:thrift-java",
        "home-mixer-features/thrift/src/main/thrift:thrift-scala",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/functional_component/decorator/builder",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/functional_component/feature_hydrator/adapters/author_features",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/functional_component/feature_hydrator/adapters/content",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/functional_component/feature_hydrator/adapters/gizmoduck_features",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/functional_component/feature_hydrator/adapters/inferred_topic",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/functional_component/feature_hydrator/adapters/simclusters_features",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/functional_component/feature_hydrator/adapters/transformer_embeddings",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/functional_component/feature_hydrator/adapters/twhin_embeddings",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/model",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/model/request",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/module",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/param",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/product/scored_tweets/param",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/service",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/util",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/util/tweetypie/content",
        "joinkey/src/main/scala/com/twitter/joinkey/context",
        "joinkey/src/main/thrift/com/twitter/joinkey/context:joinkey-context-scala",
        "language/thrift:types-lib-scala",
        "limiter/thrift-only/src/main/thrift:thrift-scala",
        "media-understanding/embeddings/src/main/thrift/com/twitter/media-understanding/embeddings:thrift-scala",
        "media-understanding/video-summary/thrift/src/main/thrift:thrift-scala",
        "periscope/api-proxy-thrift/thrift/src/main/thrift:thrift-scala",
        "product-mixer/component-library/src/main/scala/com/twitter/product_mixer/component_library/candidate_source/recommendations",
        "product-mixer/component-library/src/main/scala/com/twitter/product_mixer/component_library/feature/communities",
        "product-mixer/component-library/src/main/scala/com/twitter/product_mixer/component_library/feature/location",
        "product-mixer/component-library/src/main/scala/com/twitter/product_mixer/component_library/feature_hydrator/candidate/tweet_is_nsfw",
        "product-mixer/component-library/src/main/scala/com/twitter/product_mixer/component_library/feature_hydrator/candidate/tweet_visibility_reason",
        "product-mixer/component-library/src/main/scala/com/twitter/product_mixer/component_library/feature_hydrator/query/social_graph",
        "product-mixer/core/src/main/scala/com/twitter/product_mixer/core/functional_component/candidate_source/strato",
        "product-mixer/core/src/main/scala/com/twitter/product_mixer/core/util",
        "representation-scorer/server/src/main/scala/com/twitter/representationscorer/common",
        "search/search-router/thrift/src/main/thrift:thrift-scala",
        "servo/repo/src/main/scala",
        "src/java/com/twitter/ml/api:api-base",
        "src/java/com/twitter/ml/api/constant",
        "src/java/com/twitter/search/common/util/lang",
        "src/scala/com/twitter/ml/api/util",
        "src/scala/com/twitter/simclusters_v2/common",
        "src/scala/com/twitter/suggests/controller_data",
        "src/scala/com/twitter/timelines/prediction/adapters/large_embeddings",
        "src/scala/com/twitter/timelines/prediction/adapters/real_graph",
        "src/scala/com/twitter/timelines/prediction/adapters/realtime_interaction_graph",
        "src/scala/com/twitter/timelines/prediction/adapters/request_context",
        "src/scala/com/twitter/timelines/prediction/adapters/twistly",
        "src/scala/com/twitter/timelines/prediction/adapters/two_hop_features",
        "src/scala/com/twitter/timelines/prediction/common/util",
        "src/scala/com/twitter/timelines/prediction/features/common",
        "src/scala/com/twitter/timelines/prediction/features/location",
        "src/scala/com/twitter/timelines/prediction/features/realtime_interaction_graph",
        "src/scala/com/twitter/timelines/prediction/features/simcluster",
        "src/scala/com/twitter/timelines/prediction/features/time_features",
        "src/scala/com/twitter/topic_recos/common",
        "src/thrift/com/twitter/recos/user_tweet_entity_graph:user_tweet_entity_graph-scala",
        "src/thrift/com/twitter/search:earlybird-scala",
        "src/thrift/com/twitter/timelines/content_understanding/user_interests:user_interests-scala",
        "src/thrift/com/twitter/timelines/impression_bloom_filter:thrift-scala",
        "src/thrift/com/twitter/user_session_store:thrift-java",
        "strato/config/columns/analytics/video:video-strato-client",
        "strato/config/columns/audiencerewards/audienceRewardsService:getSuperFollowEligibility-strato-client",
        "strato/config/columns/content_understanding:content_understanding-strato-client",
        "strato/config/columns/content_understanding/internal/manhattan:manhattan-strato-client",
        "strato/config/columns/events/experiences/basketball:basketball-strato-client",
        "strato/config/columns/events/urt:urt-strato-client",
        "strato/config/columns/geo/service:service-strato-client",
        "strato/config/columns/heartbeat_optimizer:heartbeat_optimizer-strato-client",
        "strato/config/columns/hss/user_scores/api:api-strato-client",
        "strato/config/columns/language/tweet:tweet-strato-client",
        "strato/config/columns/language/user:user-strato-client",
        "strato/config/columns/ml/featureStore:featureStore-strato-client",
        "strato/config/columns/periscope:periscope-strato-client",
        "strato/config/columns/recommendations/interaction_graph/on_prem:on-prem-interaction-graph-user-features-strato-client",
        "strato/config/columns/recommendations/simclusters_v2:simclusters_v2-strato-client",
        "strato/config/columns/recommendations/user-signal-service:user-signal-service-strato-client",
        "strato/config/columns/searchai/grok:grok-strato-client",
        "strato/config/columns/searchai/storage:storage-strato-client",
        "strato/config/columns/subscription-services/subscription-verification:subscription-verification-strato-client",
        "strato/config/columns/trends/trip:trip-strato-client",
        "strato/config/columns/tweetypie/federated:federated-strato-client",
        "strato/config/columns/tweetypie/managed:managed-strato-client",
        "strato/config/columns/unified-counter/service:service-strato-client",
        "strato/config/columns/user-history-transformer/user-actions:user-actions-strato-client",
        "strato/config/columns/videoRecommendations/twitterClip:twitterClip-strato-client",
        "strato/config/columns/viewcounts:viewcounts-strato-client",
        "strato/config/src/thrift/com/twitter/strato/columns/heartbeat_optimizer:heartbeat_optimizer-scala",
        "timelinemixer/common/src/main/scala/com/twitter/timelinemixer/clients/feedback",
        "timelinemixer/common/src/main/scala/com/twitter/timelinemixer/clients/manhattan",
        "timelinemixer/common/src/main/scala/com/twitter/timelinemixer/clients/persistence",
        "timelines/src/main/scala/com/twitter/timelines/clients/strato/topics",
        "timelines/src/main/scala/com/twitter/timelines/clients/strato/twistly",
        "timelineservice/common/src/main/scala/com/twitter/timelineservice/model",
        "topic-social-proof/server/src/main/scala/com/twitter/tsp/stores",
        "topic-social-proof/server/src/main/thrift:thrift-scala",
        "topiclisting/topiclisting-core/src/main/scala/com/twitter/topiclisting",
        "tweetconvosvc/thrift/src/main/thrift:thrift-scala",
        "tweetsource/common/src/main/thrift:thrift-scala",
        "unified_user_actions/thrift/src/main/thrift/com/twitter/unified_user_actions:unified_user_actions-scala",
        "user-signal-service/thrift/src/main/thrift:thrift-scala",
        "user_history_transformer/common/src/main/scala/com/twitter/user_history_transformer/common",
        "user_history_transformer/common/src/main/scala/com/twitter/user_history_transformer/util",
        "user_history_transformer/domain/src/main/scala:aggregation",
        "user_history_transformer/domain/src/main/scala:backbone",
        "user_history_transformer/domain/src/main/scala:user-history",
        "user_history_transformer/service/src/main/java/com/x/user_action_sequence",
        "user_history_transformer/thrift/src/main/thrift/com/x/user_action_sequence:user_action_sequence-scala",
    ],
    exports = [
        "src/thrift/com/twitter/recos/user_tweet_entity_graph:user_tweet_entity_graph-scala",
        "timelinemixer/common/src/main/scala/com/twitter/timelinemixer/clients/manhattan",
    ],
)
