scala_library(
    sources = ["*.scala"],
    compiler_option_sets = ["fatal_warnings"],
    strict_deps = True,
    tags = ["bazel-compatible"],
    dependencies = [
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/functional_component/feature_hydrator",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/functional_component/feature_hydrator/adapters/transformer_embeddings",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/functional_component/feature_hydrator/user_history",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/model",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/model/request",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/param",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/util",
        "home-mixer/thrift/src/main/thrift:thrift-scala",
        "product-mixer/component-library/src/main/scala/com/twitter/product_mixer/component_library/feature/location",
        "product-mixer/core/src/main/scala/com/twitter/product_mixer/core/functional_component/filter",
        "src/thrift/com/twitter/timelines/impression_bloom_filter:thrift-scala",
        "stitch/stitch-socialgraph",
        "timelinemixer/server/src/main/scala/com/twitter/timelinemixer/injection/store/persistence",
        "timelines/src/main/scala/com/twitter/timelines/impressionstore/impressionbloomfilter",
        "timelineservice/common/src/main/scala/com/twitter/timelineservice/model",
        "util/util-slf4j-api/src/main/scala",
    ],
    exports = [
        "timelinemixer/server/src/main/scala/com/twitter/timelinemixer/injection/store/persistence",
    ],
)
