scala_library(
    sources = ["*.scala"],
    compiler_option_sets = ["fatal_warnings"],
    strict_deps = True,
    tags = ["bazel-compatible"],
    dependencies = [
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/functional_component/feature_hydrator",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/model",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/model/request",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/product/for_you/param",
        "product-mixer/component-library/src/main/scala/com/twitter/product_mixer/component_library/module:test-user-mapper",
        "product-mixer/core/src/main/scala/com/twitter/product_mixer/core/functional_component/configapi",
        "timelinemixer/server/src/main/scala/com/twitter/timelinemixer/injection/store/persistence",
        "timelineservice/common/src/main/scala/com/twitter/timelineservice/model",
    ],
)
