scala_library(
    sources = ["*.scala"],
    compiler_option_sets = ["fatal_warnings"],
    strict_deps = True,
    tags = ["bazel-compatible"],
    dependencies = [
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/functional_component/decorator/builder",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/model",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/model/request",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/param",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/product/scored_tweets/param",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/util",
        "home-mixer/thrift/src/main/thrift:thrift-scala",
        "product-mixer/component-library/src/main/scala/com/twitter/product_mixer/component_library/model/presentation/urt",
        "product-mixer/core/src/main/scala/com/twitter/product_mixer/core/functional_component/decorator/urt/builder",
        "product-mixer/core/src/main/scala/com/twitter/product_mixer/core/functional_component/selector",
        "src/scala/com/twitter/suggests/controller_data",
        "stringcenter/client",
    ],
)
