scala_library(
    compiler_option_sets = ["fatal_warnings"],
    strict_deps = True,
    dependencies = [
        "3rdparty/jvm/com/twitter/storehaus:core",
        "eventbus/client/src/main/scala/com/twitter/eventbus/client",
        "finagle/finagle-mysql/src/main/scala",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/functional_component/decorator",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/functional_component/decorator/builder",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/functional_component/feature_hydrator/adapters/content",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/functional_component/feature_hydrator/adapters/light_ranking_features",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/functional_component/feature_hydrator/adapters/non_ml_features",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/functional_component/feature_hydrator/adapters/twhin_embeddings",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/functional_component/scorer",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/marshaller/timeline_logging",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/model",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/model/candidate_source",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/model/request",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/param",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/service",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/util",
        "home-mixer/thrift/src/main/thrift:thrift-scala",
        "product-mixer/component-library/src/main/scala/com/twitter/product_mixer/component_library/candidate_source/tweet_mixer",
        "product-mixer/component-library/src/main/scala/com/twitter/product_mixer/component_library/decorator/urt",
        "product-mixer/component-library/src/main/scala/com/twitter/product_mixer/component_library/pipeline/candidate/communities_to_join",
        "product-mixer/component-library/src/main/scala/com/twitter/product_mixer/component_library/pipeline/candidate/job",
        "product-mixer/component-library/src/main/scala/com/twitter/product_mixer/component_library/pipeline/candidate/recruiting_organization",
        "product-mixer/component-library/src/main/scala/com/twitter/product_mixer/component_library/pipeline/candidate/who_to_follow_module",
        "product-mixer/component-library/src/main/scala/com/twitter/product_mixer/component_library/pipeline/candidate/who_to_subscribe_module",
        "product-mixer/component-library/src/main/scala/com/twitter/product_mixer/component_library/side_effect",
        "product-mixer/core/src/main/scala/com/twitter/product_mixer/core/feature/featuremap/datarecord",
        "product-mixer/core/src/main/scala/com/twitter/product_mixer/core/util",
        "scribelib/marshallers/src/main/scala/com/twitter/scribelib/marshallers",
        "src/scala/com/twitter/suggests/controller_data",
        "src/scala/com/twitter/timelines/prediction/adapters/twistly",
        "src/scala/com/twitter/timelines/prediction/adapters/two_hop_features",
        "src/scala/com/twitter/timelines/prediction/features/large_embeddings",
        "src/thrift/com/twitter/timelines/impression_store:thrift-scala",
        "src/thrift/com/twitter/timelines/served_candidates_logging:served_candidates_logging-scala",
        "src/thrift/com/twitter/timelines/suggests/common:data_record_metadata-scala",
        "src/thrift/com/twitter/timelines/suggests/common:poly_data_record-java",
        "src/thrift/com/twitter/timelines/timeline_logging:thrift-scala",
        "strato/config/columns/videoRecommendations/twitterClip:twitterClip-strato-client",
        "timelinemixer/server/src/main/scala/com/twitter/timelinemixer/injection/store/persistence",
        "timelines/ml:pldr-client",
        "timelines/ml:pldr-conversion",
        "timelines/ml/cont_train/common/domain/src/main/scala/com/twitter/timelines/ml/cont_train/common/domain/non_scalding",
        "timelines/src/main/scala/com/twitter/timelines/clientconfig",
        "timelines/src/main/scala/com/twitter/timelines/util/stats",
        "timelineservice/common:model",
        "tweet-mixer/thrift/src/main/thrift:thrift-scala",
        "user_session_store/src/main/scala/com/twitter/user_session_store",
    ],
)
