scala_library(
    sources = ["*.scala"],
    compiler_option_sets = ["fatal_warnings"],
    strict_deps = True,
    tags = ["bazel-compatible"],
    dependencies = [
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/model/signup",
        "home-mixer/thrift/src/main/thrift:thrift-scala",
        "product-mixer/core/src/main/scala/com/twitter/product_mixer/core/model/common",
        "product-mixer/core/src/main/scala/com/twitter/product_mixer/core/model/marshalling/request",
        "timelineservice/common:model",
    ],
    exports = [
        "home-mixer/thrift/src/main/thrift:thrift-scala",
        "product-mixer/core/src/main/scala/com/twitter/product_mixer/core/model/marshalling/request",
    ],
)
