scala_library(
    sources = ["*.scala"],
    compiler_option_sets = ["fatal_warnings"],
    strict_deps = True,
    tags = ["bazel-compatible"],
    dependencies = [
        "ads-injection/lib/src/main/scala/com/twitter/goldfinch/api",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/candidate_pipeline",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/functional_component/decorator",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/functional_component/decorator/builder",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/functional_component/decorator/urt/builder",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/functional_component/feature_hydrator",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/functional_component/filter",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/functional_component/gate",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/functional_component/selector",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/functional_component/side_effect",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/model",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/model/request",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/param",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/product/following/model",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/product/following/param",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/service",
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/util",
        "home-mixer/thrift/src/main/thrift:thrift-scala",
        "product-mixer/component-library/src/main/scala/com/twitter/product_mixer/component_library/candidate_source/account_recommendations_mixer",
        "product-mixer/component-library/src/main/scala/com/twitter/product_mixer/component_library/candidate_source/earlybird",
        "product-mixer/component-library/src/main/scala/com/twitter/product_mixer/component_library/decorator/urt",
        "product-mixer/component-library/src/main/scala/com/twitter/product_mixer/component_library/feature_hydrator/candidate/ads",
        "product-mixer/component-library/src/main/scala/com/twitter/product_mixer/component_library/feature_hydrator/candidate/param_gated",
        "product-mixer/component-library/src/main/scala/com/twitter/product_mixer/component_library/feature_hydrator/query/ads",
        "product-mixer/component-library/src/main/scala/com/twitter/product_mixer/component_library/feature_hydrator/query/async",
        "product-mixer/component-library/src/main/scala/com/twitter/product_mixer/component_library/feature_hydrator/query/impressed_tweets",
        "product-mixer/component-library/src/main/scala/com/twitter/product_mixer/component_library/feature_hydrator/query/location",
        "product-mixer/component-library/src/main/scala/com/twitter/product_mixer/component_library/feature_hydrator/query/param_gated",
        "product-mixer/component-library/src/main/scala/com/twitter/product_mixer/component_library/feature_hydrator/query/social_graph",
        "product-mixer/component-library/src/main/scala/com/twitter/product_mixer/component_library/gate",
        "product-mixer/component-library/src/main/scala/com/twitter/product_mixer/component_library/pipeline/candidate/ads",
        "product-mixer/component-library/src/main/scala/com/twitter/product_mixer/component_library/pipeline/candidate/flexible_injection_pipeline",
        "product-mixer/component-library/src/main/scala/com/twitter/product_mixer/component_library/pipeline/candidate/flexible_injection_pipeline/selector",
        "product-mixer/component-library/src/main/scala/com/twitter/product_mixer/component_library/pipeline/candidate/who_to_follow_module",
        "product-mixer/component-library/src/main/scala/com/twitter/product_mixer/component_library/premarshaller/cursor/timelines",
        "product-mixer/component-library/src/main/scala/com/twitter/product_mixer/component_library/premarshaller/urt",
        "product-mixer/component-library/src/main/scala/com/twitter/product_mixer/component_library/premarshaller/urt/builder/earlybird",
        "product-mixer/component-library/src/main/scala/com/twitter/product_mixer/component_library/selector/ads",
        "product-mixer/component-library/src/main/scala/com/twitter/product_mixer/component_library/side_effect",
        "src/java/com/twitter/search/common/schema/base",
        "src/java/com/twitter/search/common/schema/earlybird",
        "src/java/com/twitter/search/queryparser/query:core-query-nodes",
        "src/java/com/twitter/search/queryparser/query/search:search-query-nodes",
        "src/thrift/com/twitter/search:earlybird-scala",
        "timelinemixer/server/src/main/scala/com/twitter/timelinemixer/injection/model/candidate",
    ],
    exports = [
        "home-mixer/server/src/main/scala/com/twitter/home_mixer/product/following/param",
        "product-mixer/component-library/src/main/scala/com/twitter/product_mixer/component_library/decorator/urt",
        "src/thrift/com/twitter/timelines/render:thrift-scala",
    ],
)
